--- a/src/presentation/pages/survey-list/survey-list-styles.scss
+++ b/src/presentation/pages/survey-list/survey-list-styles.scss
@@ -52,25 +52,13 @@
             linear-gradient(to right, rgba($primaryLight, 0.1), rgba($primaryLight, 0.1)),
             linear-gradient(to right, $white, $white );
           background-position: 0 0, 54 0;
-          background-size: 50px 100%, 100% 100%;
+          background-size: 54px 100%, 100% 100%;
           position: relative;
 
           .iconWrap {
             position: absolute;
             top: -10px;
             right: -10px;
-            padding: 10px;
-            border-radius: 100%;
-            display: flex;
-            box-shadow: 0px 1px 3px -1px $black;
-
-            &.red {
-              background-color: $invalid;
-            }
-
-            &.green {
-              background-color: $valid;
-            }
           }
 
           time {
@@ -106,6 +94,7 @@
             font-size: 18px;
             margin: 24px;
             align-self: center;
+            flex-grow: 1;
           }
         }
 
@@ -121,6 +110,18 @@
           &:hover {
             background-color: $primaryDark;
           }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .surveyListWrap {
+    .contentWrap {
+      ul {
+        li {
+          flex-basis: 100%;
         }
       }
     }
